# fc

./: .gitmodules  CMakeLists.txt
include/fc/crypto/: edwards_ed25519.hpp  elliptic_webauthn.hpp  private_key.hpp  public_key.hpp  signature.hpp
libsodium/: CMakeLists.txt
secp256k1/upstream/include/: secp256k1.h
secp256k1/upstream/src/: secp256k1.c
src/crypto/: edwards_ed25519.cpp  signature.cpp
